# legged_locomotion

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/daedalus_control/: Stats.h
scripts/exp-3kp/: test3kp.py
src/camera/: CMakeLists.txt  package.xml
src/camera/launch/: april.launch  april_camera.launch  camera.yaml  camera_old.yaml  demo.launch  everything.launch  ps3eye.launch  ps3eye.yaml  uvc.launch  uvc_ps3eye.launch
src/camera/src/: model_translate.cpp  model_translator.cpp
src/daedalus_control/: 1.chroms  2.chroms  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  _default.gait  cmake_install.cmake  default.gait  g1.chroms  gait.cpp  optimized_3.13m.gait  optimized_3.36m.gait  optimized_3.50m.gait  optimized_4.10m.gait  optimized_4.38m.gait  optimized_5.08m.gait  optimized_5.23m&1.45ms.gait  optimized_5.46m.gait  optimized_6.45m.gait  optimized_cons_v0.18.gait  optimized_cons_v0.21.gait  optimized_cons_v0.23.gait  optimized_cons_v0.25.gait  package.xml  w1.chroms
src/daedalus_control/catkin_generated/: daedalus_control-msg-extras.cmake.installspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/daedalus_control/cmake/: daedalus_control-genmsg-context.py  daedalus_control-genmsg.cmake
src/daedalus_control/devel/: .catkin  setup.sh  (+1 more)
src/daedalus_description/: CMakeLists.txt  daedalus.2.dae  model.config  package.xml
src/daedalus_gazebo/: CMakeLists.txt  package.xml
src/daedalus_ikfast_LEG1_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
src/daedalus_ikfast_LEG1_plugin/src/: daedalus_LEG1_ikfast_moveit_plugin.cpp
src/daedalus_ikfast_LEG2_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
src/daedalus_ikfast_LEG3_plugin/: CMakeLists.txt  daedalus_LEG3_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/daedalus_ikfast_LEG4_plugin/: CMakeLists.txt  daedalus_LEG4_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/daedalus_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/daedalus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/daedalus_rough/: CMakeLists.txt  package.xml
src/ikfast_leg1/: CMakeLists.txt  package.xml
src/leg1_plugin/: CMakeLists.txt  daedalus_LEG1_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/leg2_plugin/: CMakeLists.txt  daedalus_LEG2_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/leg2_plugin/src/: daedalus_LEG2_ikfast_moveit_plugin.cpp
src/leg3_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
src/leg4_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
src/leg4_plugin/src/: daedalus_LEG4_ikfast_moveit_plugin.cpp  daedalus_LEG4_ikfast_solver.cpp
src/terrain/: 20x20.dae  20x20.stl  ___20x20.dae  rough_100x100.world
(+221 files in other folders)
